--- a/index.html
+++ b/index.html
@@ -57,14 +57,11 @@
 
                 <div class="flexbox-container">
                     <div class="flex-item-left">
-                        <h3 class="project1-name-title">Is Investing In Getting An Airbnb Apt In Berlin A Good Idea? </h3>
-                        <div class="project1-summary"> 
-                            <p class="project1-summary-text">
+                        <h3 class="project-name-title">Is Investing In Getting An Airbnb Apt In Berlin A Good Idea? </h3>
+                        <div class="project-summary"> 
+                            <p class="project-summary-text">
                                 Airbnb has redesigned the hotel and hospitality industry.  Their hosting platform has flooded the market with unlimited rental options. Undoubtedly enriching the lives of travelers and hosts worldwide. In this project I present the data for investing in Airbnb apartments in Berlin.
                             </p>
-                            <!-- <p class="project1-summary-text">     
-                                 In this project I present the data for investing in Airbnb apartments in Berlin.   
-                            </p>  -->
                         </div>
                         <button class="intro-btn" id="project-btn">
                             <a class="project-link" href="https://docs.google.com/presentation/d/e/2PACX-1vTeYamFnoHNHcucRTK-SaKeGWf1zt39hWw_GVoHzk1WC35rVe9WkABZ60M6OFrcIhPG2h5nTY6UdL6O/pub?start=false&loop=false&delayms=3000&slide=id.g8e55df0aec_0_207">Visit Site</a>
@@ -78,9 +75,9 @@
 
                 <div class="flexbox-container">
                     <div class="flex-item-left">
-                        <h3 class="project1-name-title">NYPD MEETING, How NOT to become a statistic (22nd precint)</h3>
-                        <div class="project2-summary">
-                            <p class="project2-summary-text">
+                        <h3 class="project-name-title">NYPD MEETING, How NOT to become a statistic (22nd precint)</h3>
+                        <div class="project-summary">
+                            <p class="project-summary-text">
                                 Airbnb has redesigned the hotel and hospitality industry.  Their hosting platform has flooded the market with unlimited rental options. Undoubtedly enriching the lives of travelers and hosts worldwide. In this project I present the data for investing in Airbnb apartments in Berlin. 
                             </p>
                         </div>
@@ -92,9 +89,15 @@
                         <img class="project-img" src="./imgs/NYPD Meeting edited.png" style="width: 600px; height: 400px; border: solid,5px,#0000ff; box-shadow: 3px -2px 9px 1px rgba(0,0,0,0.3);">
                     </div>
                 </div>
+
                 <div class="flexbox-container">
                     <div class="flex-item-left">
-                        <h3 class="project1-name-title">Vendor Evaluation NYC Taxi & Limousine Commission</h3>
+                        <h3 class="project-name-title">Vendor Evaluation NYC Taxi & Limousine Commission</h3>
+                        <div class="project-summary">
+                            <p class="project-summary-text">
+                                Airbnb has redesigned the hotel and hospitality industry.  Their hosting platform has flooded the market with unlimited rental options. Undoubtedly enriching the lives of travelers and hosts worldwide. In this project I present the data for investing in Airbnb apartments in Berlin. 
+                            </p>
+                        </div>
                         <button class="intro-btn" id="project-btn">
                             <a class="project-link" href="https://docs.google.com/presentation/d/e/2PACX-1vQtce06NbkWWtcoPqvNB0jH1O63YScRDdBxE2wiLyr8mp5y8TdS7NvjCoF7QVxVczfCcdhFIMtE0BnR/pub?start=false&loop=false&delayms=3000&slide=id.p">Visit Site</a>
                         </button>
@@ -105,7 +108,12 @@
                 </div>
                 <div class="flexbox-container">
                     <div class="flex-item-left">
-                        <h3 class="project1-name-title">Airbnb Berlin</h3>
+                        <h3 class="project-name-title">Airbnb Berlin</h3>
+                        <div class="project-summary">
+                            <p class="project-summary-text">
+                                Airbnb has redesigned the hotel and hospitality industry.  Their hosting platform has flooded the market with unlimited rental options. Undoubtedly enriching the lives of travelers and hosts worldwide. In this project I present the data for investing in Airbnb apartments in Berlin. 
+                            </p>
+                        </div>
                         <button class="intro-btn" id="project-btn">
                             <a href="https://docs.google.com/presentation/d/e/2PACX-1vR2WqwZAvN2gwwaKAjocrtoQ4OjYfjdTMu6vLDLxbn_6oQEzTyMZyjRRKNekYKUO-E7GXuoQuhY6arO/pub?start=false&loop=false&delayms=3000&slide=id.g9c5dcb83a8_0_0">Visit Site</a>
                         </button>
@@ -116,6 +124,7 @@
                 </div>
             </div>
         </section>
+
         <section class="contact-container" id="contact">
             <h2 class="contact-title">CONTACT ME</h2>
             <div class="contact-flexbox-container">
